--- a/styles/tvShowTemplate.css
+++ b/styles/tvShowTemplate.css
@@ -1,47 +1,47 @@
 .tv-shows-list {
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding: 0;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
 }
-  
+
 .tv-show-item {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
 }
-  
+
 .tv-show-image {
-    width: 100%;
-    height: 200px;
-    background-size: cover;
-    background-position: center;
-    margin-bottom: 10px;
+  width: 100%;
+  height: 200px;
+  background-size: cover;
+  background-position: center;
+  margin-bottom: 10px;
 }
 
 .title-and-rating {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-  
+
 .tv-show-title {
-    font-size: 1.5em;
-    margin: 0.5em 0;
-    flex: 1;
+  font-size: 1.5em;
+  margin: 0.5em 0;
+  flex: 1;
 }
 
 .tv-show-rating {
-    font-size: 20px;
-    padding-left: 10px; /* Adds some space between the title and the rating */
-    white-space: nowrap; /* Prevents the rating from wrapping */
-  }
-  
-.tv-show-genre {
-    font-size: 1em;
+  font-size: 30px; /* test*/
+  padding-left: 10px; /* Adds some space between the title and the rating */
+  white-space: nowrap; /* Prevents the rating from wrapping */
 }
-  
+
+.tv-show-genre {
+  font-size: 1em;
+}
+
 .tv-show-description {
-    font-size: 1em;
-    color: #333;
+  font-size: 1em;
+  color: #333;
 }
