added randomizer, fixed if image is not found.

--- a/styles/style.css
+++ b/styles/style.css
@@ -36,3 +36,9 @@ body {
 .home-content-container {
   width: 80%;
 }
+
+/* RANDOMIZER */
+.randomizer-container {
+  margin-top: 10em;
+  text-align: center;
+}
