--- a/styles/home.css
+++ b/styles/home.css
@@ -7,6 +7,7 @@ section {
     display: flex;
     justify-content: center;
     width: 100%;
+    padding-bottom: 5em;
 }
 
 .home-content-container {
