--- a/styles/randomizer.css
+++ b/styles/randomizer.css
@@ -14,6 +14,16 @@
   margin: 2em 0;
 }
 
+section h1 {
+  display: none;
+}
+
+@media (min-width: 500px) {
+  section h1 {
+    display: block;
+  }
+}
+
 #randomizer-btn {
   font-size: 1.3rem;
   color: #f7f7f2;
