--- a/styles/randomizer.css
+++ b/styles/randomizer.css
@@ -2,16 +2,8 @@
   font-size: 2.1rem;
 }
 
-.randomizer-container .tv-show-description {
-  height: 7em;
-}
-
 .yellow-color {
   color: #eeb902;
-}
-
-#random-show-card {
-  margin: 2em 0;
 }
 
 section h1 {
@@ -30,7 +22,7 @@ section h1 {
   background: #474747;
   border: 0.1em solid #eeb902;
   border-radius: 0.5em;
-  padding: 0.5em 2.5em;
+  padding: 0.5em 1em;
 }
 
 #randomizer-btn:hover {
@@ -47,12 +39,37 @@ section h1 {
 .randomizer-container {
   margin: 7em auto 0 auto;
   text-align: center;
-  width: 80vw;
+  width: 90vw;
+}
+
+@media (max-width: 500px) {
+  #random-show-card {
+    margin-top: -1.5em;
+  }
+  .tv-show-image {
+    height: 400px;
+  }
 }
 
 @media (min-width: 500px) {
+  .tv-show-item {
+    flex-direction: row;
+  }
+  .tv-show-info {
+    flex-direction: column;
+    width: 50%;
+  }
+  .tv-show-image {
+    width: 50%;
+  }
+  .tv-show-image {
+    margin-bottom: 20px;
+  }
+  #randomizer-btn {
+    padding: 0.5em 2.5em;
+  }
   .randomizer-container {
-    width: 60vw;
+    width: 90vw;
   }
   .randomizer-container h1 {
     font-size: 2.6rem;
@@ -60,7 +77,7 @@ section h1 {
 }
 @media (min-width: 700px) {
   .randomizer-container {
-    width: 50vw;
+    width: 80vw;
   }
   .randomizer-container h1 {
     font-size: 3.1rem;
@@ -68,7 +85,7 @@ section h1 {
 }
 @media (min-width: 1000px) {
   .randomizer-container {
-    width: 40vw;
+    width: 55vw;
   }
   .randomizer-container h1 {
     font-size: 3.5rem;
@@ -76,7 +93,10 @@ section h1 {
 }
 @media (min-width: 1400px) {
   .randomizer-container {
-    width: 30vw;
+    width: 45vw;
+  }
+  .tv-show-image {
+    width: 60%;
   }
   .randomizer-container h1 {
     font-size: 3.7rem;
